--- a/tutorials/01_download_data.ipynb
+++ b/tutorials/01_download_data.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "## Method 3: AWS CLI\n",
     "\n",
-    "This method is ideal for fast terminal-based access.\n",
+    "This method is ideal for fast terminal-based access. Replace `<file_path>` with the file path you want from the GUI database. \n",
     "\n",
     "**Install AWS CLI**:  \n",
     "\n",
@@ -83,7 +83,7 @@
     "\n",
     "**Download command**:\n",
     "```bash\n",
-    "aws s3 cp s3://dendriticconsortium/<KEY_PATH_FROM_GUI> . --no-sign-request\n",
+    "aws s3 cp s3://dendriticconsortium/<file_path> . --no-sign-request\n",
     "```"
    ]
   }
